Minor CSS fixes for Toolbar and Searchfiled, especially on mobile and on Safari (#86)

--- a/resources/less/components/SearchFiled.less
+++ b/resources/less/components/SearchFiled.less
@@ -6,6 +6,10 @@
     position: relative;
     margin-left: 15px; // Space with sort dropdown
 
+    @media @phone {
+        margin-left: 0;
+    }
+
     // Same background as .focus to give it better visibility
     background-color: @body-bg;
     color: @text-color;
@@ -15,6 +19,7 @@
         display: inline;
         outline: none;
         margin-top: -2px;
+        margin-bottom: -2px;
         border: 0 !important;
         padding: 0;
         width: 100%;
